# sets

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  libsets.c  libsets.h
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  libsets_8c.html  libsets_8h.html  libsets_8h_source.html  md_README.html  pages.html  structSetElem.html  structSets-members.html  structSets.html
docs/html/search/: all_0.js  all_1.js  all_11.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  (+5 more)
src/: libsets.c  libsets.h
testing/: sets_tests.c  sets_tests_core.c  sets_tests_core.h
